name:                project
version:             0.1.0.0
synopsis:            Final project for CIS 552
homepage:            https://www.cis.upenn.edu/~cis552/current/index.html
license:             OtherLicense
license-file:        LICENSE
author:              University of Pennsylvania
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


library
  exposed-modules:     Main, Server, Client, Parser, BaseServer
  build-depends:       base >=4.13 && <4.14
                     , QuickCheck ==2.13.2
                     , containers >=0.6 && <0.7
                     , HUnit >=1.6 && <1.7
                     , pretty >= 1.1.3
                     , time >= 1.9.3 
                     , network 
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns -Wno-orphans -Wno-unused-imports
